1/10/23:
-Another fix to transforms (rotations behaviour wrong)

28/9/23:
-Transform inheritance math fixed, setabsoluteX functions fixed
-LookAt transform fixed

27/9/23:
-Fixed terrible ecs bug, have to do all component memory allocation in engine instead of scripts - fixes a really common crash occuring after recompiling scripts

24/9/23:
-Made exiting simulation mode in the editor much faster (was reloading the env map each time previously)
-Fixed large texture memory leak not freeing stbi data (forgot to correct changes made ages ago), this has fixed a lot of bugs I didn't understand (was just running out of memory)
-Fixed some bugs with filepath serialization and absolute/relative issues
-Fixed VAO memory leak

22/9/23:
-In-engine rendering of physx debug graphics
-Rewrite of VAO's and buffers, more generalized
-Physx visual debugger connections established
-Removed event queueing system (misunderstood dll execution environments)
-Start on physx joint components
-Switched from uint_8t* to std::any for event data payloads


19/9/23:
-Fullscreen scene panel during simulation mode (done for simplifying mouse transformations etc with scripts)
-Fixed script event queue not being cleared each frame
-Audio fixes

17/9/23:
-Exposed raycasting to scripts
-Mouse input stuff added in scripts
-Fixed script filepaths not being preserved if not loaded correctly causing them to disconnect from entities
-Fixed deleteentity script crash where entities could be pushed into the deletion queue multiple times
-Fixed total elapsed time calculation
-Fixed material deletion crash where imgui would try to render the deleted preview image
-Fixed script reconnection after reload bug where all script components would be reconnected even if they didn't have it
-Fixed material preview crash caused by trying to render a material preview for a material that could have been deleted

16/9/23:
-Switched to vcpkg for managing physx

15/9/23:
-Data components