@@ -65,7 +65,8 @@ namespace ORNG {
 		Material* mp_selected_material = nullptr;
 		std::unique_ptr<Scene>* mp_scene_context = nullptr;
 
-		std::vector<Material*> m_material_deletion_queue;
+		// UUID's of assets flagged for deletion
+		std::vector<uint64_t> m_asset_deletion_queue;
 
 		Events::EventListener<Events::AssetEvent> m_asset_listener;
 
