@@ -1,3 +1,10 @@
+9/10/23:
+-Fixed terrain generation, LOD seams still present 
+-Fixed mesh deletion crash caused by attempting to render a deleted preview image with imgui
+
+2/10/23:
+-Fixed audio asset .osound file serialization duplication bug
+
 1/10/23:
 -Another fix to transforms (rotations behaviour wrong)
 
